# milvus

./: go.mod
configs/: milvus.yaml
deployments/docker/dev/: docker-compose-apple-silicon.yml
internal/core/: CMakeLists.txt  conanfile.py
internal/core/src/: CMakeLists.txt
internal/core/src/accessmanager/: CMakeLists.txt  access_manager_client.cpp  access_manager_client.h  milvus_accessmanager.pc.in
internal/core/src/common/: type_c.h
internal/core/src/dpccvsaccessmanager/: CMakeLists.txt  DpcCvsAccessManagerClient.cpp  DpcCvsAccessManagerClient.h
internal/core/src/indexbuilder/: CMakeLists.txt  index_c.cpp
internal/core/src/segcore/: load_index_c.cpp
internal/core/src/storage/: CMakeLists.txt  ChunkManagers.cpp  CollectionChunkManager.cpp  CollectionChunkManager.h  CollectionIdChunkManagerCache.cpp  CollectionIdChunkManagerCache.h  MinioChunkManager.cpp  MinioChunkManager.h  Types.h  storage_c.cpp
internal/proto/: index_coord.proto
internal/storage/: fabric_factory.go  minio_object_storage.go
internal/util/indexcgowrapper/: build_index_info.go
pkg/: go.mod
pkg/util/paramtable/: component_param.go
